--- a/pstExtractor/src/main/webapp/sections/about/description.xhtml
+++ b/pstExtractor/src/main/webapp/sections/about/description.xhtml
@@ -4,11 +4,9 @@
 	xmlns:t="http://myfaces.apache.org/tomahawk"
 >
 	<p>
-		This web application is a showcase of Bufflehead Software's Java library for extracting information from Microsoft
-		Outlook PST and OST files for Windows systems. This technology may be licenced from Bufflehead Software as a customized
-		web service returning XML, JSON, or any other suitable data interchange format; it is also possible to licence the
-		library to run on your own server if you wish to develop applications which deal directly with Outlook PST and OST
-		files.
+		This web application is a showcase of the jmcleodfoss Java library for extracting information from Microsoft
+		Outlook PST and OST files for Windows systems. This technology may be used to create a customized web service 
+		returning XML, JSON, or any other suitable data interchange format.
 	</p>
 	<p>
 		The following technologies are used in this demonstration application:
@@ -23,9 +21,9 @@
 		<li>jQuery</li>
 	</p>
 	<h2>
-		Contact Bufflehead Software
+		Contact jmcleodfoss
 	</h2>
 	<p>
-		<a href="mailto:info.pstlib@bufflehead.com">by e-mail</a>
+		<a href="mailto:jmcleodfoss@gmail.com">by e-mail</a>
 	</p>
 </html>
