--- a/pstExtractor/src/main/webapp/sections/common/footer.xhtml
+++ b/pstExtractor/src/main/webapp/sections/common/footer.xhtml
@@ -8,6 +8,6 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 >
 	<ui:component>
-		Copyright 2011, Bufflehead Software
+		Copyright 2011, James McLeod
 	</ui:component>
 </html>
