--- a/pstExtractor/src/main/webapp/sections/home/description.xhtml
+++ b/pstExtractor/src/main/webapp/sections/home/description.xhtml
@@ -4,12 +4,8 @@
 	xmlns:t="http://myfaces.apache.org/tomahawk"
 >
 	<p>
-		Welcome to Bufflehead Software's demonstration web application of our library for extracting information from Microsoft
+		Welcome to jmcleodfoss's demonstration web application of our library for extracting information from Microsoft
 		Outlook PST and OST files for Windows systems.
-	</p>
-	<p>
-		Bufflehead Software specializes in providing interoperatbility solutions for e-mail, allowing clients to bring together
-		messages from multiple sources, including Microsoft Outlook, Gmail, Yahoo! Mail, MSN, Facebook, and Twitter.
 	</p>
 
 	<h2>
@@ -20,9 +16,9 @@
 	</p>
 
 	<h2>
-		Contact Bufflehead Software
+		Contact jmcleodfoss
 	</h2>
 	<p>
-		<a href="mailto:info.pstlib@bufflehead.com">by e-mail</a>
+		<a href="mailto:jmcleodfoss@gmail.com">by e-mail</a>
 	</p>
 </html>
