Reformat contact info

--- a/pstExtractor/src/main/webapp/sections/about/description.xhtml
+++ b/pstExtractor/src/main/webapp/sections/about/description.xhtml
@@ -20,10 +20,7 @@
 		<li>Javascript</li>
 		<li>jQuery</li>
 	</p>
-	<h2>
-		Contact jmcleodfoss
-	</h2>
 	<p>
-		<a href="mailto:jmcleodfoss@gmail.com">by e-mail</a>
+		<a href="mailto:jmcleodfoss@gmail.com">Contact jmcleodfoss</a>
 	</p>
 </html>
