--- a/pstExtractor/src/main/webapp/sections/about/description.xhtml
+++ b/pstExtractor/src/main/webapp/sections/about/description.xhtml
@@ -12,11 +12,11 @@
 		The following technologies are used in this demonstration application:
 	</p>
 	<p>
-		<li>Apache Tomcat</li>
+		<li>Apache Tomcat EE</li>
 		<li>CSS</li>
 		<li>XHTML</li>
 		<li>Java</li>
-		<li>Java Server Faces (JSF 2.0)</li>
+		<li>Java Server Faces (JSF 2.3)</li>
 		<li>Javascript</li>
 		<li>jQuery</li>
 	</p>
