--- a/pstExtractor/src/main/webapp/sections/about/description.xhtml
+++ b/pstExtractor/src/main/webapp/sections/about/description.xhtml
@@ -4,9 +4,9 @@
 	xmlns:t="http://myfaces.apache.org/tomahawk"
 >
 	<p>
-		This web application is a showcase of the jmcleodfoss Java library for extracting information from Microsoft
-		Outlook PST and OST files for Windows systems. This technology may be used to create a customized web service 
-		returning XML, JSON, or any other suitable data interchange format.
+		This web application is a showcase of the jmcleodfoss <a href="https://github.com/Jmcleodfoss/pstreader/tree/master/pst">pst</a>
+		Java library for extracting information from Microsoft Outlook PST and OST files for Windows systems. This technology may be
+		used to create a customized web service returning XML, JSON, or any other suitable data interchange format.
 	</p>
 	<p>
 		The following technologies are used in this demonstration application:
