Reformat contact info

--- a/pstExtractor/src/main/webapp/sections/home/description.xhtml
+++ b/pstExtractor/src/main/webapp/sections/home/description.xhtml
@@ -15,10 +15,7 @@
 		<a href="ExtractionForm.jsf">Try It!</a>
 	</p>
 
-	<h2>
-		Contact jmcleodfoss
-	</h2>
 	<p>
-		<a href="mailto:jmcleodfoss@gmail.com">by e-mail</a>
+		<a href="mailto:jmcleodfoss@gmail.com">Contact jmcleodfoss</a>
 	</p>
 </html>
