Add link to pst library in github and consequent reformatting

--- a/pstExtractor/src/main/webapp/sections/home/description.xhtml
+++ b/pstExtractor/src/main/webapp/sections/home/description.xhtml
@@ -4,8 +4,8 @@
 	xmlns:t="http://myfaces.apache.org/tomahawk"
 >
 	<p>
-		Welcome to jmcleodfoss's demonstration web application of our library for extracting information from Microsoft
-		Outlook PST and OST files for Windows systems.
+		Welcome to the demonstration web application of the jmcleodfoss <a href="https://github.com/Jmcleodfoss/pstreader/tree/master/pst">pst</a>
+		library for extracting information from Microsoft Outlook PST and OST files for Windows systems.
 	</p>
 
 	<h2>
