Remove JSF version info - this doesn't provide much use to any readers

--- a/pstExtractor/src/main/webapp/sections/about/description.xhtml
+++ b/pstExtractor/src/main/webapp/sections/about/description.xhtml
@@ -16,7 +16,7 @@
 		<li>CSS</li>
 		<li>XHTML</li>
 		<li>Java</li>
-		<li>Java Server Faces (JSF 2.3)</li>
+		<li>Java Server Faces</li>
 		<li>Javascript</li>
 		<li>jQuery</li>
 	</p>
