--- a/pstExtractor/src/main/webapp/sections/common/full-extraction-form.xhtml
+++ b/pstExtractor/src/main/webapp/sections/common/full-extraction-form.xhtml
@@ -1,66 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtc">
 <html	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:t="http://myfaces.apache.org/tomahawk"
+	xmlns:tc="http://myfaces.apache.org/tobago/component"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 >
 	<ui:component>
 		<h:outputScript library='js' name="extraction-form.js" target="head"/>
-		<h:form	enctype="multipart/form-data"
-			method="post"
-			name="uploadPSTForm"
-			id="uploadPSTForm"
-			onreset="setButtonsEnabled(false);"
-		>
-			<h:panelGrid styleClass="dialog-box">
-				<h:panelGroup layout="block" styleClass="centered-container">
-					<h:outputLabel for="file" value="#{res['file.label']}"/>
-					<t:inputFileUpload
-						value="#{pstBean.uploadedFile}"
-						id="file"
-						xrequired="true"
-						storage="file"
-						accept="application/vnd.ms-outlook"
-						onchange="inputFileChange()"
-						styleClase="show-extents"
-					/>
-				</h:panelGroup>
+		<tc:form id="uploadPSTForm" name="uploadPSTForm" onreset="setButtonsEnabled(false);">
+			<tc:box class="dialog-box">
+				<tc:file label="#{res['file.label']}" value="#{pstBean.uploadedFile}" valueChangeListener="#{pstBean.fileChangeListener}" id="file" required="true">
+					<!-- commended out until I figure out how to restrict this to pst/ost/etc files -->
+					<!--tc:validateFileItem contentType="application/vnd.ms-outlook"/-->
+				</tc:file>
 	
-				<h:panelGroup layout="block" styleClass="centered-container">
-					<h:outputLabel for="password" value="#{res['password.label']}"/>
-					<h:inputSecret value="#{pstBean.password}" id="password"/>
-				</h:panelGroup>
+				<tc:in label="#{res['password.label']}" value="#{pstBean.password}" id="password"/>
 	
-				<h:selectManyCheckbox
-					styleClass="grouped-choices"
-					layout="pageDirection"
-					onclick="setResetButtonEnabled(true)"
-					onkeypress="setResetButtonEnabled(true)"
-					value="#{pstBean.selectedExtractionTypes}"
-				>
-					<f:selectItems value="#{pstBean.extractionTypeChoices}" var="item" binding="#{item}"/>
-				</h:selectManyCheckbox>
+				<tc:selectManyCheckbox class="grouped-choices" onclick="setResetButtonEnabled(true)" value="#{pstBean.selectedExtractionTypes}">
+					<tc:selectItems value="#{pstBean.extractionTypeChoices}"/>
+				</tc:selectManyCheckbox>
 	
-				<h:panelGroup layout="block" styleClass="centered-container">
-					<h:commandButton
-						value="#{res['submitPSTButton.text']}"
-						type="submit"
-						action="#{pstBean.submitPST}"
-						id="button-submit"
-						disabled="false"
-					/>
-					<span class="h-spacer"/>
-					<h:commandButton
-						value="#{res['resetButton.text']}"
-						type="reset"
-						id="button-reset"
-						disabled="false"
-					/>
-				</h:panelGroup>
-			</h:panelGrid>
-		</h:form>
+				<tc:buttons>
+					<tc:button label="#{res['submitPSTButton.text']}" action="#{pstBean.submitPST}" id="submit"/>
+					<tc:button label="#{res['resetButton.text']}"     action="#{pstBean.resetForm}" id="reset" />
+				</tc:buttons>
+			</tc:box>
+		</tc:form>
 	</ui:component>
 </html>
