--- a/pstExtractor/src/main/webapp/sections/common/full-extraction-form.xhtml
+++ b/pstExtractor/src/main/webapp/sections/common/full-extraction-form.xhtml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtc">
-<html	xmlns="http://www.w3.org/1999/xhtml"
+<xml	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:tc="http://myfaces.apache.org/tobago/component"
@@ -28,4 +27,4 @@
 			</tc:box>
 		</tc:form>
 	</ui:component>
-</html>
+</xml>
