--- a/pstExtractor/src/main/webapp/sections/common/leftmenu.xhtml
+++ b/pstExtractor/src/main/webapp/sections/common/leftmenu.xhtml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html	xmlns="http://www.w3.org/1999/xhtml"
+<xml	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:tc="http://myfaces.apache.org/tobago/component"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 >
@@ -35,4 +34,4 @@
 			</tbody>
 		</table>
 	</ui:component>
-</html>
+</xml>
