--- a/pstExtractor/src/main/webapp/sections/common/full-extraction-form.xhtml
+++ b/pstExtractor/src/main/webapp/sections/common/full-extraction-form.xhtml
@@ -8,10 +8,7 @@
 		<h:outputScript library='js' name="extraction-form.js" target="head"/>
 		<tc:form id="uploadPSTForm" name="uploadPSTForm">
 			<tc:box class="dialog-box">
-				<tc:file label="#{res['file.label']}" value="#{pstBean.uploadedFile}" id="file" required="true">
-					<!-- commended out until I figure out how to restrict this to pst/ost/etc files -->
-					<!--tc:validateFileItem contentType="application/vnd.ms-outlook"/-->
-				</tc:file>
+				<tc:file label="#{res['file.label']}" value="#{pstBean.uploadedFile}" id="file" required="true"/>
 	
 				<tc:in label="#{res['password.label']}" value="#{pstBean.password}" id="password"/>
 	
