Drop unnecessary root xml and html tags, except where needed to introduce namespaces

--- a/pstExtractor/src/main/webapp/sections/common/footer.xhtml
+++ b/pstExtractor/src/main/webapp/sections/common/footer.xhtml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<xml	xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
->
-	<ui:component>
-		Copyright 2011-2023, James McLeod
-	</ui:component>
-</xml>
+<ui:component xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	Copyright 2011-2023, James McLeod
+</ui:component>
