--- a/pstExtractor/src/main/webapp/sections/extraction-form/content.xhtml
+++ b/pstExtractor/src/main/webapp/sections/extraction-form/content.xhtml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<xml	xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
->
-	<ui:component>
-		<p>
-			#{res['submit.description.text']}
-		</p>
+<ui:component xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	<p>
+		#{res['submit.description.text']}
+	</p>
 
-		<ui:include src="../common/full-extraction-form.xhtml"/>
+	<ui:include src="../common/full-extraction-form.xhtml"/>
 	
-	</ui:component>
-</xml>
+</ui:component>
