--- a/pstExtractor/src/main/webapp/sections/common/full-extraction-form.xhtml
+++ b/pstExtractor/src/main/webapp/sections/common/full-extraction-form.xhtml
@@ -1,26 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<xml	xmlns="http://www.w3.org/1999/xhtml"
+<ui:component
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:tc="http://myfaces.apache.org/tobago/component"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 >
-	<ui:component>
-		<h:outputScript library='js' name="extraction-form.js" target="head"/>
-		<tc:form id="uploadPSTForm" name="uploadPSTForm">
-			<tc:box class="dialog-box">
-				<tc:file label="#{res['file.label']}" value="#{pstBean.uploadedFile}" id="file" required="true"/>
+	<h:outputScript library='js' name="extraction-form.js" target="head"/>
+	<tc:form id="uploadPSTForm" name="uploadPSTForm">
+		<tc:box class="dialog-box">
+			<tc:file label="#{res['file.label']}" value="#{pstBean.uploadedFile}" id="file" required="true"/>
 	
-				<tc:in label="#{res['password.label']}" value="#{pstBean.password}" id="password"/>
+			<tc:in label="#{res['password.label']}" value="#{pstBean.password}" id="password"/>
 
-				<tc:selectManyCheckbox class="grouped-choices" value="#{pstBean.selectedExtractionTypes}" required="true">
-					<tc:selectItems value="#{pstBean.extractionTypeChoices}"/>
-				</tc:selectManyCheckbox>
+			<tc:selectManyCheckbox class="grouped-choices" value="#{pstBean.selectedExtractionTypes}" required="true">
+				<tc:selectItems value="#{pstBean.extractionTypeChoices}"/>
+			</tc:selectManyCheckbox>
 	
-				<tc:buttons>
-					<tc:button label="#{res['submitPSTButton.text']}" action="#{pstBean.submitPST}" id="submit"/>
-					<tc:button label="#{res['resetButton.text']}"     action="#{pstBean.resetForm}" id="reset"/>
-				</tc:buttons>
-			</tc:box>
-		</tc:form>
-	</ui:component>
-</xml>
+			<tc:buttons>
+				<tc:button label="#{res['submitPSTButton.text']}" action="#{pstBean.submitPST}" id="submit"/>
+				<tc:button label="#{res['resetButton.text']}"     action="#{pstBean.resetForm}" id="reset"/>
+			</tc:buttons>
+		</tc:box>
+	</tc:form>
+</ui:component>
