Make html tags defining a single XML namespace more concise

--- a/pstExtractor/src/main/webapp/sections/about/description.xhtml
+++ b/pstExtractor/src/main/webapp/sections/about/description.xhtml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html	xmlns="http://www.w3.org/1999/xhtml"
->
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<p>
 		This web application is a showcase of the jmcleodfoss <a href="https://github.com/Jmcleodfoss/pstreader/tree/master/pst">pst</a>
 		Java library for extracting information from Microsoft Outlook PST and OST files for Windows systems. This technology may be
