--- a/pstExtractor/src/main/webapp/sections/help/description.xhtml
+++ b/pstExtractor/src/main/webapp/sections/help/description.xhtml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html	xmlns="http://www.w3.org/1999/xhtml"
->
+<html xmlns="http://www.w3.org/1999/xhtml">
 	Internationalizable Help contents
 </html>
