Use method from tobago-example-* of loading initial page via http-equiv Refresh rather than JS

--- a/pstExtractor/src/main/webapp/index.xhtml
+++ b/pstExtractor/src/main/webapp/index.xhtml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
-<html	xmlns="http://www.w3.org/1999/xhtml">
-	<body onload="location = 'views/ExtractionForm.xhtml';"/>
+<html>
+	<head>
+		<meta http-equiv="Cache-Control" content="no-cache"/>
+		<meta http-equiv="Refresh" content="0; URL=views/ExtractionForm.xhtml"/>
+	</head>
+	<body>
+	</body>
 </html>
