Drop unneeded name attribute

--- a/pstExtractor/src/main/webapp/sections/incorrect-password/content.xhtml
+++ b/pstExtractor/src/main/webapp/sections/incorrect-password/content.xhtml
@@ -5,7 +5,7 @@
 	xmlns:tc="http://myfaces.apache.org/tobago/component"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 >
-	<tc:form id="uploadPasswordForm" name="uploadPasswordForm">
+	<tc:form id="uploadPasswordForm">
 		<tc:box pt:class="dialog-box">
 			<tc:in label="#{res['password.label']}" password="true" value="#{pstBean.password}" id="password"/>
 
