Replace pt:style with markup attribute to specify CSS

--- a/pstExtractor/src/main/webapp/sections/access-denied/content.xhtml
+++ b/pstExtractor/src/main/webapp/sections/access-denied/content.xhtml
@@ -4,7 +4,7 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 >
 	<tc:form id="uploadPasswordForm">
-		<tc:box pt:class="dialog-box">
+		<tc:box markup="dialogbox">
 			<tc:in label="#{res['password.label']}" password="true" value="#{pstBean.password}" id="password">
 				<f:ajax execute="@this" render="reset" immediate="true"/>
 			</tc:in>
